fixed width of main content windows, and switched from vh/vw spacing to a more fixed pixel-based spacing. Also added obnoxious small gray line.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,22 +10,21 @@ h2 {
 
 body {
     text-align: center;
+    margin: 0;
 }
 
 #topbar {
+    margin: 0;
     display: inline-block;
     text-align: left;
     min-width: 960px;
-    margin-bottom: auto;
-    margin-top: auto;
     border-bottom-color: #cccccc;
 }
 
 #name {
-    margin-bottom: auto;
     float: left;
     max-width: 250px;
-    margin-top: auto;
+    margin: 0;
     background-color: #4aaaa5;
     color: white;
     padding: 2.5vh;
@@ -33,12 +32,19 @@ body {
 
 #linkbar {
     float: right;
-    margin-bottom: auto;
-    margin-top: auto;
+    margin: 0;
     background-color: #ffffff;
     color:#777777;
     padding: 2.5vh;
     font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+#lowbar {
+    float: left;
+    margin: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #cccccc;
 }
 
 a {
@@ -56,21 +62,15 @@ a {
     background-image: url(../images/Light_Gray_Mottle.jpg);
 }
 
-#lowbar {
-    float: left;
-    margin: auto;
-}
-
 #about_content {
     text-align: left;
     display: inline-block;
     float: center;
     margin-top: 20px;
-    margin-left: 10vw;
-    margin-right: 10vw;
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
+    min-width: 960px;
     max-width: 960px;
     min-height: 40vh;
     background-color: white;
@@ -82,7 +82,7 @@ a {
 
 #headshot {
     float: left;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 p {
@@ -111,6 +111,13 @@ Below this point is .css that is unique to the 'contact' page. -OR*/
 
 #contactform {
     font: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+#about_content{
+    text-align: left;
+    display: inline-block;
+    float: center;
+    min-width: 960px;
 }
 
 #submitbutton {
@@ -142,6 +149,8 @@ textarea {
 
 #portfolio_content {
     position: relative;
+    text-align: left;
+    display: inline-block;
     float: center;
     margin-top: 2vh;
     margin-left: 10vw;
